# zerostyl

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  coverage.yml
benchmarks/debug-workflow/: Cargo.toml
benchmarks/debug-workflow/src/: main.rs
contracts/: CONTRACTS.md
contracts/private_lending_pool/: Cargo.toml
contracts/private_lending_pool/src/: lib.rs  main.rs
contracts/private_swap_verifier/: Cargo.toml
contracts/private_swap_verifier/src/: lib.rs  main.rs
contracts/private_vote_verifier/: Cargo.toml
contracts/private_vote_verifier/src/: lib.rs  main.rs
contracts/state_mask_verifier/: Cargo.toml
contracts/state_mask_verifier/src/: lib.rs  main.rs
contracts/tx_privacy_verifier/: Cargo.toml
contracts/tx_privacy_verifier/src/: lib.rs  main.rs
crates/zerostyl-circuits/: Cargo.toml
crates/zerostyl-circuits/src/: abi.rs  descriptor.rs  error.rs  lib.rs  macros.rs  proof.rs  registry.rs  report.rs  schema.rs
crates/zerostyl-circuits/tests/: macro_integration.rs
crates/zerostyl-cli/: Cargo.toml
crates/zerostyl-cli/src/: lib.rs  main.rs
crates/zerostyl-cli/tests/: snapshots.rs
crates/zerostyl-cli/tests/snapshots/: example_schema.snap.json  private_vote_schema.snap.json  state_mask_schema.snap.json  tx_privacy_schema.snap.json
crates/zerostyl-compiler/: Cargo.toml
crates/zerostyl-compiler/examples/: compiler_demo.rs
crates/zerostyl-compiler/src/: ast.rs  circuit.rs  error.rs  lib.rs  parser.rs
crates/zerostyl-compiler/src/codegen/: keys.rs  mod.rs  prover.rs  wasm_builder.rs
crates/zerostyl-compiler/src/gadgets/: comparison.rs  merkle.rs  mod.rs  poseidon_commitment.rs  range.rs
crates/zerostyl-compiler/tests/: ast_tests.rs  circuit_tests.rs  error_tests.rs  mock_prover_tests.rs  parser_tests.rs
crates/zerostyl-debugger/: Cargo.toml
crates/zerostyl-debugger/benches/: debug_circuit.rs
crates/zerostyl-debugger/src/: error.rs  inspector.rs  lib.rs  types.rs  witness.rs
crates/zerostyl-debugger/tests/: integration.rs
crates/zerostyl-exporter/: Cargo.toml
crates/zerostyl-exporter/src/: cli.rs  codegen.rs  error.rs  extractor.rs  lib.rs  parser.rs  resolver.rs  schema.rs  transform.rs  version.rs
crates/zerostyl-exporter/tests/: abi_codegen_vs_runtime.rs  e2e_zk_private_demo.rs  snapshots.rs  transform_cli.rs  zk_private_snapshots.rs
crates/zerostyl-exporter/tests/fixtures/: zk_private_merkle.rs.in  zk_private_range.rs.in
crates/zerostyl-exporter/tests/snapshots/: example_abi.snap.json  private_vote_abi.snap.json  state_mask_abi.snap.json  tx_privacy_abi.snap.json  zk_private_merkle_abi.snap.json  zk_private_merkle_circuit.snap.rs  zk_private_merkle_descriptor.snap.rs  zk_private_merkle_transformed.snap.rs  zk_private_range_abi.snap.json  zk_private_range_circuit.snap.rs  zk_private_range_descriptor.snap.rs  zk_private_range_transformed.snap.rs
crates/zerostyl-runtime/: Cargo.toml  README.md
crates/zerostyl-runtime/src/: error.rs  lib.rs  types.rs
crates/zerostyl-runtime/tests/: error_tests.rs  types_tests.rs
crates/zerostyl-verifier/: Cargo.toml  build.rs  rust-toolchain.toml  vk_components.rs
crates/zerostyl-verifier/src/: embedded.rs  lib.rs  reference_circuit.rs  stylus.rs  verifier.rs  verifier_nostd.rs  vk_components.rs
crates/zerostyl-verifier/tests/: integration_test.rs
crates/zerostyl-verifier/tools/: extract_vk_v2.rs  inspect_vk_detailed.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXTENDING.md
examples/example_demo/: Cargo.toml
examples/example_demo/src/: descriptor.rs  lib.rs
examples/private_vote/: Cargo.toml  README.md
examples/private_vote/benches/: circuit_bench.rs
examples/private_vote/examples/: private_vote_demo.rs
examples/private_vote/src/: descriptor.rs  lib.rs
examples/private_vote/tests/: prover_integration.rs
examples/state_mask/: Cargo.toml
examples/state_mask/benches/: circuit_bench.rs
examples/state_mask/examples/: prove_and_verify.rs  state_mask_demo.rs
examples/state_mask/src/: descriptor.rs  lib.rs
examples/state_mask/tests/: prover_integration.rs
examples/tx_privacy/: Cargo.toml
examples/tx_privacy/benches/: circuit_bench.rs
examples/tx_privacy/examples/: prove_and_verify.rs  tx_privacy_demo.rs
examples/tx_privacy/src/: descriptor.rs  lib.rs
examples/tx_privacy/tests/: prover_integration.rs
examples/zk_private_demo/: Cargo.toml  abi.json  contract_source.rs
examples/zk_private_demo/src/: circuit.rs  contract_transformed.rs  descriptor.rs  lib.rs
examples/zk_private_demo/tests/: mock_prove.rs
scripts/: check.sh  clean.sh  setup.sh  test.sh
tests/: e2e.sh
witnesses/: private_vote_valid.json  private_vote_wrong_vote.json  state_mask_invalid.json  state_mask_valid.json  state_mask_wrong_commitment.json  tx_privacy_valid.json  tx_privacy_wrong_balance.json
