[workspace]
resolver = "2"
members = [
    "crates/zerostyl-compiler",
    "crates/zerostyl-debugger",
    "crates/zerostyl-exporter",
    "crates/zerostyl-runtime",
    "crates/zerostyl-verifier",
    "examples/tx_privacy",
    "examples/state_mask",
    "examples/private_vote",
    "examples/kyc_proof",
    "examples/dark_pool_order",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kazai777 <kazai777.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/kazai777/zerostyl"

[workspace.dependencies]
