[workspace]
resolver = "2"
members = [
    "crates/zerostyl-compiler",
    "crates/zerostyl-cli",
    "crates/zerostyl-debugger",
    "crates/zerostyl-exporter",
    "crates/zerostyl-runtime",
    "crates/zerostyl-verifier",
    "examples/tx_privacy",
    "examples/state_mask",
    "examples/private_vote",
    "benchmarks/debug-workflow",
]

exclude = [
    "contracts/tx_privacy_verifier",
    "contracts/private_lending_pool",
    "contracts/state_mask_verifier",
    "contracts/private_vote_verifier",
    "contracts/private_swap_verifier",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kazai777 <kazai777.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/kazai777/zerostyl"

# Release profile optimized for Stylus (small WASM)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
