[package]
name = "debug-workflow-bench"
version = "0.1.0"
edition = "2021"
publish = false
description = "Output quality comparison: raw halo2 vs ZeroStyl on real broken witnesses"

[dependencies]
zerostyl-debugger = { path = "../../crates/zerostyl-debugger" }
state_mask        = { path = "../../examples/state_mask" }
tx_privacy        = { path = "../../examples/tx_privacy" }
private_vote      = { path = "../../examples/private_vote" }
halo2_proofs      = { version = "0.3" }
halo2curves       = "0.7"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"

[[bin]]
name = "quality-report"
path = "src/main.rs"
