[package]
name = "zerostyl-circuits"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Circuit descriptor trait, schema, and registry for the ZeroStyl toolkit"
keywords = ["arbitrum", "stylus", "zero-knowledge", "privacy", "zk-snarks"]
categories = ["cryptography", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
