[package]
name = "zerostyl-compiler"
version = "0.1.0"
edition = "2021"
authors = ["kazai777 <kazai777.dev@gmail.com>"]
license = "MIT"
description = "Compile halo2 zk-SNARKs circuits to WASM for Arbitrum Stylus contracts"
repository = "https://github.com/kazai777/zerostyl"
keywords = ["arbitrum", "stylus", "zero-knowledge", "privacy", "zk-snarks"]
categories = ["cryptography", "development-tools"]

[dependencies]
zerostyl-runtime = { path = "../zerostyl-runtime" }
halo2_proofs = { version = "0.3", features = ["dev-graph"] }
halo2curves = "0.7"
stylus-sdk = "0.9.0"
ruint = "=1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
thiserror = "1.0"
# WASM code generation dependencies
walrus = "0.22"
wasm-encoder = "0.220"
wasmparser = "0.220"
