[package]
name = "zerostyl-debugger"
version = "0.1.0"
edition = "2021"
authors = ["kazai777 <kazai777.dev@gmail.com>"]
license = "MIT"
description = "Privacy debugger with zk-mocking for Stylus smart contracts"
repository = "https://github.com/kazai777/zerostyl"
keywords = ["arbitrum", "stylus", "zero-knowledge", "privacy", "zk-snarks"]
categories = ["cryptography", "development-tools"]

[dependencies]
zerostyl-runtime = { path = "../zerostyl-runtime" }
tx_privacy = { path = "../../examples/tx_privacy" }
state_mask = { path = "../../examples/state_mask" }
private_vote = { path = "../../examples/private_vote" }
halo2_proofs = { version = "0.3", features = ["dev-graph"] }
halo2curves = "0.7"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "zerostyl-debug"
path = "src/bin/zerostyl-debug.rs"