[package]
name = "zerostyl-debugger"
version = "0.1.0"
edition = "2021"
authors = ["kazai777 <kazai777.dev@gmail.com>"]
license = "MIT"
description = "Privacy debugger CLI dispatching circuit inspection through the zerostyl Registry"
repository = "https://github.com/kazai777/zerostyl"
keywords = ["arbitrum", "stylus", "zero-knowledge", "privacy", "zk-snarks"]
categories = ["cryptography", "development-tools"]

[dependencies]
zerostyl-circuits = { path = "../zerostyl-circuits" }
example_demo = { path = "../../examples/example_demo" }
state_mask = { path = "../../examples/state_mask" }
tx_privacy = { path = "../../examples/tx_privacy" }
private_vote = { path = "../../examples/private_vote" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "zerostyl-debug"
path = "src/bin/zerostyl-debug.rs"
