[package]
name = "zerostyl-exporter"
version = "0.1.0"
edition = "2021"
authors = ["Zakaria Chaikhi <zakaria.chaikhi@example.com>"]
license = "MIT"
description = "Generate privacy-safe ABI interfaces for zk-powered Stylus contracts"
repository = "https://github.com/kazai777/zerostyl"
keywords = ["arbitrum", "stylus", "zero-knowledge", "privacy", "zk-snarks"]
categories = ["cryptography", "development-tools"]

[dependencies]
zerostyl-runtime = { path = "../zerostyl-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
