[package]
name = "zerostyl-exporter"
version = "0.1.0"
edition = "2021"
authors = ["kazai777 <kazai777.dev@gmail.com>"]
license = "MIT"
description = "Generate privacy-safe ABI metadata (AbiSchema) for zk-powered Stylus contracts"
repository = "https://github.com/kazai777/zerostyl"
keywords = ["arbitrum", "stylus", "zero-knowledge", "privacy", "zk-snarks"]
categories = ["cryptography", "development-tools"]

[dependencies]
zerostyl-circuits = { path = "../zerostyl-circuits" }
example_demo = { path = "../../examples/example_demo" }
state_mask = { path = "../../examples/state_mask" }
tx_privacy = { path = "../../examples/tx_privacy" }
private_vote = { path = "../../examples/private_vote" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"

[dev-dependencies]
tempfile = "3.0"
zk_private_demo = { path = "../../examples/zk_private_demo" }

[lib]
name = "zerostyl_exporter"
path = "src/lib.rs"

[[bin]]
name = "zerostyl-export"
path = "src/bin/zerostyl-export.rs"
