[package]
name = "zerostyl-verifier"
version = "0.1.0"
edition = "2021"
authors = ["kazai777 <kazai777.dev@gmail.com>"]
description = "WASM verifier for ZeroStyl circuits on Arbitrum Stylus"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "extract-vk-v2"
path = "tools/extract_vk_v2.rs"
required-features = ["std"]

[dependencies]
# Halo2 dependencies
# Disable default features (multicore) for WASM compatibility
halo2_proofs = { version = "0.3", default-features = false }
halo2curves = { version = "0.7", default-features = false, features = ["bits"] }

# Serialization - no_std compatible
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }

# Cryptography (no_std compatible)
blake2 = { version = "0.10", default-features = false }

# Regex for VK extraction tools (only needed with std)
regex = { version = "1.10", optional = true }

# Stylus SDK (optional, enabled with "stylus" feature)
stylus-sdk = { version = "0.9", optional = true }
alloy-primitives = { version = "0.8.20", default-features = false, optional = true }
mini-alloc = { version = "0.9", optional = true }


# WASM support - use custom getrandom for Stylus (no wasm-bindgen)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

[build-dependencies]
halo2_proofs = "0.3"
halo2curves = { version = "0.7", features = ["bits", "derive_serde"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.0"
rand = "0.8"
regex = "1.10"

[features]
default = ["std"]
std = [
    "serde/std",
    "postcard/use-std",
    "halo2curves/default",
    "halo2curves/derive_serde",
    "regex",
]
stylus = [
    "stylus-sdk",
    "alloy-primitives",
    "mini-alloc",
]
embedded_vk = []  # Enable VK embedding at build time

[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binary size
strip = true            # Strip symbols

[profile.dev]
panic = "abort"
